--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -94,13 +94,13 @@
                             </a>
                         </li>
                         <li class="dropdown">
-                            <a class="dropdown-toggle" href="#">
+                            <a class="dropdown-toggle" href="{{ path('coming_soon') }}">
                                 Challenges
                                 <i class="fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">All challenges</a></li>
-                                <li><a href="#">Search</a></li>
+                                <li><a href="{{ path('coming_soon') }}">All challenges</a></li>
+                                <li><a href="{{ path('coming_soon') }}">Search</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
