--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/addChapter.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/addChapter.html.twig
@@ -56,12 +56,15 @@
                         </div>
                         <div class="post-content">
                             <h2 class="text-center"><a href="#">{{ course.title }}</a></h2>
-                            {{ course.introduce | markdown }}
+                            <div class="markdown-body">
+                                {{ html | raw }}
+                            </div>
                         </div>
-                        <div id="courseId" style="display: none;">{{ course.id }}</div>
+                        <div ng-init="courseId={{ course.id }}">{{ course.id }}</div>
                     </article>
                 </div>
             </div>
+            <hr class="tall" />
             <div class="row">
                 <div class="col-md-12">
                     <form class="form-horizontal" role="form" name="addChapter">
@@ -120,112 +123,6 @@
 
         <div class="col-md-3">
             <aside class="sidebar">
-                <div class="tabs">
-                    <ul class="nav nav-tabs">
-                        <li class="active"><a href="#popularPosts" data-toggle="tab"><i class="fa fa-star"></i> Popular</a></li>
-                        <li><a href="#recentPosts" data-toggle="tab">Recent</a></li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="popularPosts">
-                            <ul class="simple-post-list">
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }} " alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tab-pane" id="recentPosts">
-                            <ul class="simple-post-list">
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }}" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="post-image">
-                                        <div class="img-thumbnail">
-                                            <a href="blog-post.html">
-                                                <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="post-info">
-                                        <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                        <div class="post-meta">
-                                            Jan 10, 2013
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 <div class="sticky">
                     <h4>Chapters</h4>
                     <div class="list-group">
