--- a/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/detail.html.twig
@@ -33,64 +33,67 @@
                             <div class="post-content">
                                 <h2 class="text-center"><a href="#">{{ tutorial.title }}</a></h2>
                                 <div class="post-meta">
-                                    <span><i class="fa fa-user"></i> By <a href="#">{{ tutorial.author.username }}</a> </span>
-                                    <span><i class="fa fa-tag"></i>
+                                    <span class="pull-right"><i class="fa fa-user"></i> By <a href="{{ path('lecturer_index', {'username' : tutorial.author.username}) }}">{{ tutorial.author.username }}</a> </span>
+                                    <span class="pull-right"><i class="fa fa-tag"></i>
                                         {% for t in tutorial.tutorialTags %}
-                                            <a href="#">{{ t.tag.text }}</a>
+                                            <a href="{{ path('tag_index', {'tag' : t.tag.text}) }}">{{ t.tag.text }}</a>
                                         {% endfor %}
                                     </span>
-                                    <span><i class="fa fa-comments"></i> <a href="#">{{ tutorial.comments | length }} Comments</a></span>
+                                    <span class="pull-right"><i class="fa fa-comments"></i> <a href="#">{{ tutorial.comments | length }} Comments</a></span>
                                 </div>
-                                <div>{{ tutorial.content | markdown }} </div>
+                                <hr class="tall"/>
+                                <div class="markdown-body">
+                                    {{ html | raw }}
+                                </div>
                                 <div class="row col-md-12">
                                     <div class="post-block post-comments clearfix row col-md-12">
                                         <h3><i class="fa fa-comments"></i>Comments ({{ tutorial.comments | length }})</h3>
-                                        <ul class="comments" ng-hide="commentToggle">
-                                            {% for comment in tutorial.comments %}
-                                                <li>
-                                                    <div class="comment">
-                                                        <div class="img-thumbnail">
-                                                            <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-2.jpg') }}">
-                                                        </div>
-                                                        <div class="comment-block">
-                                                            <div class="comment-arrow"></div>
-                                                                <span class="comment-by">
-                                                                    <strong>{{ comment.author.username }}</strong>
-                                                                    <span class="pull-right">
-                                                                        <span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>
-                                                                    </span>
-                                                                </span>
-                                                            <p>{{ comment.content }}</p>
-                                                            <span class="date pull-right">{{ comment.createdAt | date('h:M d/m/Y') }}</span>
-                                                        </div>
-                                                    </div>
-                                                    <ul class="comments reply">
-                                                        <li>
-                                                            {% for reply in comment.replies %}
-                                                                <div class="comment">
-                                                                    <div class="img-thumbnail">
-                                                                        <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-3.jpg') }}">
-                                                                    </div>
-                                                                    <div class="comment-block">
-                                                                        <div class="comment-arrow"></div>
-                                                                            <span class="comment-by">
-                                                                                <strong>{{ reply.author.username }}</strong>
-                                                                            </span>
-                                                                        <p>{{ reply.content }}</p>
-                                                                        <span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>
-                                                                    </div>
-                                                                </div>
-                                                            {% endfor %}
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                        <ul class="comments" ng-hide="!commentToggle">
+                                        {#<ul class="comments" ng-hide="commentToggle">#}
+                                            {#{% for comment in tutorial.comments %}#}
+                                                {#<li>#}
+                                                    {#<div class="comment">#}
+                                                        {#<div class="img-thumbnail">#}
+                                                            {#<img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-2.jpg') }}">#}
+                                                        {#</div>#}
+                                                        {#<div class="comment-block">#}
+                                                            {#<div class="comment-arrow"></div>#}
+                                                                {#<span class="comment-by">#}
+                                                                    {#<strong>{{ comment.author.username }}</strong>#}
+                                                                    {#<span class="pull-right">#}
+                                                                        {#<span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>#}
+                                                                    {#</span>#}
+                                                                {#</span>#}
+                                                            {#<p>{{ comment.content }}</p>#}
+                                                            {#<span class="date pull-right">{{ comment.createdAt | date('h:M d/m/Y') }}</span>#}
+                                                        {#</div>#}
+                                                    {#</div>#}
+                                                    {#<ul class="comments reply">#}
+                                                        {#<li>#}
+                                                            {#{% for reply in comment.replies %}#}
+                                                                {#<div class="comment">#}
+                                                                    {#<div class="img-thumbnail">#}
+                                                                        {#<img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-3.jpg') }}">#}
+                                                                    {#</div>#}
+                                                                    {#<div class="comment-block">#}
+                                                                        {#<div class="comment-arrow"></div>#}
+                                                                            {#<span class="comment-by">#}
+                                                                                {#<strong>{{ reply.author.username }}</strong>#}
+                                                                            {#</span>#}
+                                                                        {#<p>{{ reply.content }}</p>#}
+                                                                        {#<span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>#}
+                                                                    {#</div>#}
+                                                                {#</div>#}
+                                                            {#{% endfor %}#}
+                                                        {#</li>#}
+                                                    {#</ul>#}
+                                                {#</li>#}
+                                            {#{% endfor %}#}
+                                        {#</ul>#}
+                                        <ul class="comments">
                                             <li ng-repeat="comment in comments">
                                                 <div class="comment">
                                                     <div class="img-thumbnail">
-                                                        <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-2.jpg') }}">
+                                                        <img class="avatar" alt="avatar" ng-src="<{ comment.author.avatar }>">
                                                     </div>
                                                     <div class="comment-block">
                                                         <div class="comment-arrow"></div>
@@ -125,7 +128,7 @@
                                         </ul>
                                     </div>
 
-                                    <div class="post-block post-leave-comment">
+                                    <div class="post-leave-comment">
                                         <h3>Leave a comment</h3>
                                         <div ng-init="currentTutorial={{ tutorial.id }}"></div>
                                         <form>
@@ -133,7 +136,7 @@
                                                 <div class="form-group">
                                                     <div class="col-md-12">
                                                         <label>Comment *</label>
-                                                        <textarea maxlength="5000" rows="10" ng-model="content" class="form-control" name="comment"></textarea>
+                                                        <textarea maxlength="5000" rows="10" ng-model="commentContent" class="form-control" name="comment"></textarea>
                                                     </div>
                                                 </div>
                                             </div>
@@ -166,4 +169,5 @@
 {% block custom %}
     <script src="{{ asset('bundles/viettutweb/js/sticky_sidebar.js') }}"></script>
     <script src="{{ asset('bundles/viettutweb/js/controller/tutorial/comment.js') }}"></script>
+    <script src="{{ asset('bundles/viettutweb/js/controller/tutorial.js') }}"></script>
 {% endblock %}
