--- a/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/index.html.twig
@@ -46,10 +46,10 @@
                                 <div class="col-md-12">
                                     <div class="post-meta">
                                         <span><i class="fa fa-calendar"></i>{{ tut.createdAt | date("m/d/Y") }}</span>
-                                        <span><i class="fa fa-user"></i> By <a href="#">{{ tut.author.username }}</a> </span>
+                                        <span><i class="fa fa-user"></i> By <a href="{{ path('lecturer_index', {'username' : tut.author.username}) }}">{{ tut.author.username }}</a> </span>
                                         <span><i class="fa fa-tag"></i>
                                             {% for t in tut.tutorialTags %}
-                                                <a href="#">{{ t.tag.text }}</a>
+                                                <a href="{{ path('tag_index', {'tag' : t.tag.text}) }}">{{ t.tag.text }}</a>
                                             {% endfor %}
                                         </span>
                                         <span><i class="fa fa-comments"></i> <a href="#">{{ tut.comments | length }} comments</a></span>
@@ -69,121 +69,12 @@
             <div class="col-md-3">
                 <aside class="sidebar">
 
-                    <h4>Categories</h4>
+                    <h4>Links and references</h4>
                     <ul class="nav nav-list primary push-bottom">
-                        <li><a href="#">Design</a></li>
-                        <li><a href="#">Photos</a></li>
-                        <li><a href="#">Videos</a></li>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Technology</a></li>
+                        <li><a href="http://knpuniversity.com" target="_blank">Knp University</a></li>
+                        <li><a href="http://scotch.io" target="_blank">Scotch.io</a></li>
+                        <li><a href="http://codeschool.com" target="_blank">Code School</a></li>
                     </ul>
-
-                    <div class="tabs">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#popularPosts" data-toggle="tab"><i class="fa fa-star"></i> Popular</a></li>
-                            <li><a href="#recentPosts" data-toggle="tab">Recent</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="popularPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }} " alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="tab-pane" id="recentPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="#">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="#">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </aside>
             </div>
         </div>
