finish myCourse page

--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Create course</h1>
+                    <h1>Edit course</h1>
                 </div>
             </div>
         </div>
