--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/comingSoon.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/comingSoon.html.twig
@@ -66,22 +66,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="newsletter">
-                    <h5>Let me know when the site is done</h5>
-
-                    <div class="alert alert-success hidden" id="newsletterSuccess">
-                        <strong>Success!</strong> You've been added to our email list.
-                    </div>
-
-                    <div class="alert alert-danger hidden" id="newsletterError"></div>
-
-                    <form id="newsletterForm" action="{{ path('user_subscribe') }}" method="POST">
-                        <div class="input-group">
-                            <input class="form-control" placeholder="Email Address" name="email" id="newsletterEmail" type="text">
-										<span class="input-group-btn">
-											<button class="btn btn-default" type="submit">Subscribe Now</button>
-										</span>
-                        </div>
-                    </form>
+                    <h5>subscribe to get notification once the page is completed !</h5>
                 </div>
             </div>
         </div>
