--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block controller %}ng-controller="CommentController"{% endblock %}
+{% block controller %}ng-controller="CourseController"{% endblock %}
 {% block main %}
     <style>
         textarea {
@@ -13,7 +13,7 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active"><a href="{{ path('course_index') }}">Courses</a></li>
+                        <li class="active"><a href="{{ path('course_index') }}">Khóa học</a></li>
                     </ul>
                 </div>
             </div>
@@ -21,7 +21,6 @@
     </section>
 
     <div class="container">
-        <div ng-init="currentCourse={{ course.id }}"></div>
         <div class="row">
             <div class="col-md-9">
                 <div class="row">
@@ -40,15 +39,18 @@
                                 <h2 class="text-center"><a href="#">{{ course.title }}</a></h2>
                                 <div class="post-meta">
                                     <span class="pull-right"><i class="fa fa-user"></i> By <a href="{{ path('lecturer_index', {'username' : course.author.username}) }}">{{ course.author.username }}</a> </span>
+                                    {% if course.courseTags | length > 0 %}
                                     <span class="pull-right"><i class="fa fa-tag"></i>
                                         {% for t in course.courseTags %}
                                             <a href="{{ path('tag_index', {'tag' : t.tag.text}) }}">{{ t.tag.text }}</a>
                                         {% endfor %}
                                     </span>
+                                    {% endif %}
                                     <span class="pull-right"><i class="fa fa-comments"></i> <a href="#">{{ course.comments | length }} Comments</a></span>
                                 </div>
                                 <hr class="tall"/>
-                                <div class="markdown-body">{{ html | raw }} </div>
+                                <textarea style="display: none;" id="introduce">{{ course.introduce }}</textarea>
+                                <wiz-markdown content="introduce" class="markdown-body"></wiz-markdown>
                                 {% if lastChapter %}
                                     <div class="row">
                                         <div class="pull-left">
@@ -56,51 +58,53 @@
                                         </div>
                                     </div>
                                 {% endif %}
-                                <div class="row col-md-12">
+                                <div class="row col-md-12" ng-controller="CommentController">
+                                    <div ng-init="currentCourse={{ course.id }}"></div>
                                     <div class="post-block post-comments clearfix row col-md-12">
-                                        <h3><i class="fa fa-comments"></i>Comments (<{ numberComments }>)</h3>
-                                        {#<ul class="comments" ng-hide="commentToggle">#}
-                                            {#{% for comment in course.comments %}#}
-                                                {#<li>#}
-                                                    {#<div class="comment">#}
-                                                        {#<div class="img-thumbnail">#}
-                                                            {#<img class="avatar" alt="" src="{{ comment.author.avatar }}">#}
-                                                        {#</div>#}
-                                                        {#<div class="comment-block">#}
-                                                            {#<div class="comment-arrow"></div>#}
-                                                                {#<span class="comment-by">#}
-                                                                    {#<strong>{{ comment.author.username }}</strong>#}
-                                                                    {#<span class="pull-right">#}
-                                                                        {#<span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>#}
-                                                                    {#</span>#}
-                                                                {#</span>#}
-                                                            {#<p>{{ comment.content }}</p>#}
-                                                            {#<span class="date pull-right">{{ comment.createdAt | date('h:M d/m/Y') }}</span>#}
-                                                        {#</div>#}
-                                                    {#</div>#}
-                                                    {#<ul class="comments reply">#}
-                                                        {#<li>#}
-                                                            {#{% for reply in comment.replies %}#}
-                                                                {#<div class="comment">#}
-                                                                    {#<div class="img-thumbnail">#}
-                                                                        {#<img class="avatar" alt="" src="{{ reply.author.avatar }}">#}
-                                                                    {#</div>#}
-                                                                    {#<div class="comment-block">#}
-                                                                        {#<div class="comment-arrow"></div>#}
-                                                                            {#<span class="comment-by">#}
-                                                                                {#<strong>{{ reply.author.username }}</strong>#}
-                                                                            {#</span>#}
-                                                                        {#<p>{{ reply.content }}</p>#}
-                                                                        {#<span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>#}
-                                                                    {#</div>#}
-                                                                {#</div>#}
-                                                            {#{% endfor %}#}
-                                                        {#</li>#}
-                                                    {#</ul>#}
-                                                {#</li>#}
-                                            {#{% endfor %}#}
-                                        {#</ul>#}
-                                        <ul class="comments">
+                                        <h3 ng-hide="commentToggle"><i class="fa fa-comments"></i>Comments ({{ course.comments | length }})</h3>
+                                        <h3 ng-if="commentToggle"><i class="fa fa-comments"></i>Comments (<{ numberComments }>)</h3>
+                                        <ul class="comments" ng-hide="commentToggle">
+                                            {% for comment in course.comments %}
+                                                <li>
+                                                    <div class="comment">
+                                                        <div class="img-thumbnail">
+                                                            <img class="avatar" alt="avatar" src="{{ comment.author.avatar }}">
+                                                        </div>
+                                                        <div class="comment-block markdown-body">
+                                                            <div class="comment-arrow"></div>
+                                                                <span class="comment-by">
+                                                                    <strong>{{ comment.author.username }}</strong>
+                                                                    <span class="pull-right">
+                                                                        <span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>
+                                                                    </span>
+                                                                </span>
+                                                            <p>{{ comment.content | markdown }}</p>
+                                                            <span class="date pull-right">{{ comment.createdAt | date('h:i d/m/Y') }}</span>
+                                                        </div>
+                                                    </div>
+                                                    <ul class="comments reply">
+                                                        <li>
+                                                            {% for reply in comment.replies %}
+                                                                <div class="comment">
+                                                                    <div class="img-thumbnail">
+                                                                        <img class="avatar" alt="avatar" src="{{ reply.author.avatar }}">
+                                                                    </div>
+                                                                    <div class="comment-block">
+                                                                        <div class="comment-arrow"></div>
+                                                                            <span class="comment-by">
+                                                                                <strong>{{ reply.author.username }}</strong>
+                                                                            </span>
+                                                                        <p>{{ reply.content }}</p>
+                                                                        <span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>
+                                                                    </div>
+                                                                </div>
+                                                            {% endfor %}
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                        <ul class="comments" ng-if="commentToggle">
                                             <li ng-repeat="comment in comments">
                                                 <div class="comment">
                                                     <div class="img-thumbnail">
@@ -114,7 +118,7 @@
                                                                         <span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>
                                                                     </span>
                                                                 </span>
-                                                        <p><{ comment.content }></p>
+                                                        <p><wiz-markdown content="comment.content" class="markdown-body"></wiz-markdown></p>
                                                         <span class="date pull-right"><{ comment.createdAt | date:'yyyy-MM-dd HH:mm:ss' }></span>
                                                     </div>
                                                 </div>
@@ -140,15 +144,13 @@
                                     </div>
 
                                     <div class="post-block post-leave-comment">
-                                        <h3>Leave a comment</h3>
+                                        <h3>Bình luận</h3>
                                         <form>
                                             <div class="row">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
-                                                        <label>Comment</label>
-                                                        <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control">
+                                                        <wiz-markdown-editor content="content" maxlength="5000" rows="10" class="form-control" style="height: 200px;width: 90%;">
                                                         </wiz-markdown-editor>
-                                                        {#<textarea maxlength="5000" rows="10" ng-model="content" class="form-control" name="comment"></textarea>#}
                                                     </div>
                                                 </div>
                                             </div>
@@ -160,7 +162,7 @@
                                                             ng-disabled="!isAuthenticated"
                                                             ng-click="addComment()"
                                                             class="ladda-button btn-primary"
-                                                            style="border-radius: 5px;">Post Comment</button>
+                                                            style="border-radius: 5px;">Đăng</button>
                                                 </div>
                                             </div>
                                         </form>
@@ -176,10 +178,10 @@
                 {% include 'sidebar.html' %}
                 <aside class="sidebar">
                     <div class="sticky">
-                        <h4>Chapters</h4>
+                        <h4>Chương</h4>
                         <ul class="nav nav-tabs nav-stacked">
                             <li class="active">
-                                <a href="#">Introduce</a>
+                                <a href="#">Giới thiệu khóa học</a>
                             </li>
                             {% for chapter in course.chapters %}
                                 <li>
@@ -187,11 +189,11 @@
                                 </li>
                             {% endfor %}
                         </ul>
-                        {#<div class="list-group">#}
-                            {#{% for chapter in course.chapters %}#}
-                                {#<a href="{{ path('chapter_detail', {'username': username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>#}
-                            {#{% endfor %}#}
-                        {#</div>#}
+                        <div class="list-group">
+                            {% for chapter in course.chapters %}
+                                <a href="{{ path('chapter_detail', {'username': username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
+                            {% endfor %}
+                        </div>
                     </div>
                 </aside>
             </div>
@@ -201,4 +203,5 @@
 {% block custom %}
     <script src="{{ asset('bundles/viettutweb/js/sticky_sidebar.js') }}"></script>
     <script src="{{ asset('bundles/viettutweb/js/controller/course/comment.js') }}"></script>
+    <script src="{{ asset('bundles/viettutweb/js/controller/course/detail/course.js') }}"></script>
 {% endblock %}
