--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
@@ -13,7 +13,7 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active">Course</li>
+                        <li class="active">Khóa học</li>
                     </ul>
                 </div>
             </div>
@@ -47,13 +47,16 @@
                                     <div class="post-meta">
                                         <span><i class="fa fa-calendar"></i>{{ course.createdAt | date("m/d/Y") }}</span>
                                         <span><i class="fa fa-user"></i> By <a href="{{ path('lecturer_index', {'username' : course.author.username}) }}">{{ course.author.username }}</a> </span>
+                                        {% if course.courseTags | length > 0 %}
                                         <span><i class="fa fa-tag"></i>
                                             {% for t in course.courseTags %}
                                                 <a href="{{ path('tag_index', {'tag' : t.tag.text}) }}">{{ t.tag.text }}</a>
                                             {% endfor %}
                                         </span>
+                                        {% endif %}
                                         <span><i class="fa fa-book"></i> <a href="#">{{ course.chapters | length }} Chapters</a></span>
-                                        <a href="{{ path('course_detail', {'hash' : course.hashTag, 'username' : course.author.username}) }}" class="btn btn-xs btn-primary pull-right">Read more...</a>
+                                        <span><i class="fa fa-book"></i> <a href="#">{{ course.comments | length }} comments</a></span>
+                                        <a href="{{ path('course_detail', {'hash' : course.hashTag, 'username' : course.author.username}) }}" class="btn btn-xs btn-primary pull-right">Đọc tiếp...</a>
                                     </div>
                                 </div>
                             </div>
@@ -68,8 +71,7 @@
 
             <div class="col-md-3">
                 <aside class="sidebar">
-
-                    <h4>Links and references</h4>
+                    <h4>Link tham khảo</h4>
                     <ul class="nav nav-list primary push-bottom">
                         <li><a href="http://knpuniversity.com" target="_blank">Knp University</a></li>
                         <li><a href="http://scotch.io" target="_blank">Scotch.io</a></li>
