--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/myCourses.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/myCourses.html.twig
@@ -41,13 +41,12 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="post-meta">
-                                    <span><i class="fa fa-calendar"></i><{ course.createdAt | date : "m/d/y" }></span>
-                                    <span><i class="fa fa-user"></i> By <a href="#"><{ course.author.username }></a> </span>
-                                        <span><i class="fa fa-tag"></i>
-                                                <a href="#" ng-repeat="t in course.courseTags">
-                                                    <{ t.tag.text }>
-                                                </a>
-                                        </span>
+                                    <span><i class="fa fa-calendar"></i><{ course.createdAt | date : "M/d/y" }></span>
+                                    <span ng-if="course.courseTags.length > 0"><i class="fa fa-tag"></i>
+                                        <a href="#" ng-repeat="t in course.courseTags">
+                                            <{ t.tag.text }>
+                                        </a>
+                                    </span>
                                     <span><i class="fa fa-book"></i> <a href="#"><{ course.chapters.length }> Chapters</a></span>
                                     <div class="btn-group pull-right" role="group" aria-label="Basic example">
                                         <a href="<{ buildViewLink(course) }>" class="btn btn-primary padding-left-5 padding-right-5" target="_blank" title="view in another tab">View</a>
