--- a/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block controller %}ng-controller="TutorialController"{% endblock %}
+{% block controller %}TutorialController{% endblock %}
 {% block main %}
     <style>
         textarea {
@@ -13,7 +13,7 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active">Tutorials</li>
+                        <li class="active">Hướng dẫn</li>
                     </ul>
                 </div>
             </div>
@@ -21,20 +21,12 @@
     </section>
 
     <div class="container">
-
         <div class="row">
             <div class="col-md-9">
                 <div class="blog-posts">
                     {% for tut in pagination %}
                         <article class="post post-medium">
                             <div class="row">
-                                {#<div class="col-md-5">#}
-                                    {#<div class="post-image">#}
-                                        {#<div class="img-thumbnail">#}
-                                            {#<img class="img-responsive" src="{{ course.imagePath }}" alt="post image">#}
-                                        {#</div>#}
-                                    {#</div>#}
-                                {#</div>#}
                                 <div class="col-md-12">
                                     <div class="post-content">
                                         <h2><a href="{{ path('tutorial_detail', {'hash' : tut.hashTag, 'username' : tut.author.username}) }}">{{ tut.title }}</a></h2>
@@ -53,7 +45,7 @@
                                             {% endfor %}
                                         </span>
                                         <span><i class="fa fa-comments"></i> <a href="#">{{ tut.comments | length }} comments</a></span>
-                                        <a href="{{ path('tutorial_detail', {'hash' : tut.hashTag, 'username' : tut.author.username}) }}" class="btn btn-xs btn-primary pull-right">Read more...</a>
+                                        <a href="{{ path('tutorial_detail', {'hash' : tut.hashTag, 'username' : tut.author.username}) }}" class="btn btn-xs btn-primary pull-right">Đọc tiếp...</a>
                                     </div>
                                 </div>
                             </div>
@@ -62,14 +54,11 @@
                     <ul class="pagination pagination-lg pull-right">
                         {{ knp_pagination_render(pagination) }}
                     </ul>
-
                 </div>
             </div>
-
             <div class="col-md-3">
                 <aside class="sidebar">
-
-                    <h4>Links and references</h4>
+                    <h4>Links tham khảo</h4>
                     <ul class="nav nav-list primary push-bottom">
                         <li><a href="http://knpuniversity.com" target="_blank">Knp University</a></li>
                         <li><a href="http://scotch.io" target="_blank">Scotch.io</a></li>
@@ -78,6 +67,5 @@
                 </aside>
             </div>
         </div>
-
     </div>
 {% endblock %}
