--- a/app/Resources/views/sidebar.html
+++ b/app/Resources/views/sidebar.html
@@ -13,7 +13,7 @@
                         <div class="post-image">
                             <div class="img-thumbnail">
                                 <a href="{{ path('course_detail', {'hash' : c.hashTag, 'username' : c.author.username}) }}">
-                                    <img src="{{ c.imagePath }}" alt="image" width="50px" height="50px">
+                                    <img src="{{ c.imagePath }}" alt="cover image" width="50px" height="50px">
                                 </a>
                             </div>
                         </div>
