--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="progress" ng-show="loading">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                    <div class="progress-bar progress-bar-striped active width90pc" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                         <span class="sr-only">45% Complete</span>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div class="list-group">
                             <a href="#" class="list-group-item active">Giới thiệu khóa học</a>
                             {% for chapter in course.chapters %}
-                                <a href="{{ path('chapter_detail', {'username': course.author.username, 'hash': course.hashTag, 'cHash': chapter.hashTag}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
+                                <a href="{{ path('chapter_edit', {'token': chapter.token}) }}" class="list-group-item">Chapter {{ chapter.position }} : {{ chapter.header }}</a>
                             {% endfor %}
                         </div>
                     </div>
