--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/edit.html.twig
@@ -80,7 +80,7 @@
                                     </wiz-markdown-editor>
                                 </div>
                                 <div id="preview" class="tab-pane">
-                                    <wiz-markdown content="introduce"></wiz-markdown>
+                                    <wiz-markdown content="introduce" class="markdown-body"></wiz-markdown>
                                 </div>
                             </div>
                         </div>
