--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <h1><strong>ViettuT</strong> acadamy.</h1>
+                    <h1><strong>ViettuT</strong> academy.</h1>
                     <p class="lead">
                         Học lập trình từ cơ bản đến nâng cao thông qua các ví dụ thực tế kèm theo <bold>mã nguồn</bold> và các bài <em>test</em>.
                         <br>
@@ -170,7 +170,7 @@
                             </div>
                             <div class="row">
                                 <div class="span12 pagination-centered">
-                                    <a class="btn btn-primary btn-lg pull-right" href="{{ path("course_index") }}">Read more ...</a>
+                                    <a class="btn btn-primary btn-lg pull-right" href="{{ path("course_index") }}">Xem thêm ...</a>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="span12 pagination-centered">
-                                        <a class="btn btn-primary btn-lg pull-right" href="{{ path('tutorial_index') }}">Read more ...</a>
+                                        <a class="btn btn-primary btn-lg pull-right" href="{{ path('tutorial_index') }}">Xem thêm ...</a>
                                     </div>
                                 </div>
                             </div>
