--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -88,7 +88,7 @@
                                                                             <span class="comment-by">
                                                                                 <strong>{{ reply.author.username }}</strong>
                                                                             </span>
-                                                                        <p>{{ reply.content }}</p>
+                                                                        <p>{{ reply.content | markdown }}</p>
                                                                         <span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>
                                                                     </div>
                                                                 </div>
@@ -127,7 +127,7 @@
                                                                         <span class="comment-by">
                                                                             <strong><{ reply.author.username }></strong>
                                                                         </span>
-                                                                <p><{ reply.content }></p>
+                                                                <p><wiz-markdown content="reply.content" class="markdown-body"></wiz-markdown></p>
                                                                 <span class="date pull-right"><{ reply.createdAt | date:'yyyy-MM-dd HH:mm:ss' }></span>
                                                             </div>
                                                         </div>
